# tap-s3-parquet

./: .gitignore  CODEOWNERS  LICENSE.md  README.md  TODO.md  config.sample.json  mypy.ini  pyproject.toml
src/tap_s3_parquet/: __init__.py  cli.py  discovery.py  parquet.py  s3.py  sync.py  utils.py
