[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tap_s3_parquet"
author = "Ian Knox"
author-email = "iknox@narrativescience.com"
home-page = "https://github.com/ns-iknox/tap-s3-parquet"
license = "BSD-3-Clause"
description-file = "README.md"
requires = [
    "awswrangler>=1.4.0",
    "black>=22.6.0",
    "Click>=7.0",
    "genson>=1.2.1",
    "s3path>=0.1.101",
    "singer-python>=5.9.0"
]
requires-python = ">=3.6,<4"
classifiers = ["License :: OSI Approved :: BSD License"]

[tool.flit.scripts]
tap-s3-parquet = "tap_s3_parquet.cli:cli"

[tool.flit.sdist]
include = ["LICENSE.md"]
exclude = ["tests/"]
